--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=notification-service
+server.port=8083
+
+#Mail Properties
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=995161804be6a3
+spring.mail.password=d86c48badd92d7
+
 
 #Kafka Consumer Properties
-spring.kafka.bootstrap-servers=localhost:9200
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-service
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.mapping=event:com.rishmi5h.notification.order.OrderPlacedEvent;
