--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-service
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.mapping=event:com.rishmi5h.notification.order.event.OrderPlacedEvent;
+spring.kafka.consumer.properties.spring.json.trusted.mapping=event:com.rishmi5h.microservices.order.event.OrderPlacedEvent;
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.rishmi5h.microservices.order.event
